tests/data-clumps/test-cases/parameter-field/simple/negative/typescript/test.config.ts
import type { ScenarioConfig } from '@/scenarioUtils';

const config = {
  "name": "TypeScript parameter-field without enough shared values",
  "language": "typescript",
  "sourceDir": "source",
  "expectedReportFile": "report-expected.json",
  "detectorOptions": {}
} satisfies ScenarioConfig;

export default config;
